--- a/order/build.gradle
+++ b/order/build.gradle
@@ -20,9 +20,15 @@ dependencyManagement {
 
 dependencies {
     implementation 'io.zeebe:zeebe-client-java:0.22.1'
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.cloud:spring-cloud-stream'
     implementation 'org.springframework.cloud:spring-cloud-stream-binder-kafka'
+
+    implementation 'com.h2database:h2'
+
+    implementation 'org.modelmapper:modelmapper:2.3.5'
 
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
