--- a/services/payment/src/main/resources/application.yaml
+++ b/services/payment/src/main/resources/application.yaml
@@ -1,6 +1,3 @@
-server:
-  port: 7081
-
 spring:
   cloud:
     stream:
@@ -16,3 +13,6 @@ spring:
         binder:
           brokers: kafka:9092
           zkNodes: zookeeper:2181
+
+zeebe:
+  brokerContactPoint: zeebe:26500
